--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@ body {
   margin-bottom: 30px;
 }
 
-.item:hover, button:hover, button.active {
+.item:hover, button:hover, button.active, .pagination button:hover{
   background-color: #e5e5e5;
 }
 
@@ -130,4 +130,22 @@ button {
 .closeButton {
   float: right;
   cursor: pointer;
+}
+
+.centered {
+  position: absolute;
+  left: 50%;
+}
+
+.pagination button {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  transition: background-color .3s;
+  border: 1px solid #ddd;
+}
+
+button[disabled] {
+  cursor: not-allowed;
 }
